--- a/prototype/resources/scss/base/variables.scss
+++ b/prototype/resources/scss/base/variables.scss
@@ -11,7 +11,8 @@
     --primary-darker: #5980CD;
     
     // shadows
-    --shadow:0 0 10px 7px rgba(0, 0, 0, 0.15);
+    --shadow: 0 7px 6px 0px rgba(0, 0, 0, 0.1);
+    --shadow-color: 0 0 10px 7px rgba(89, 128, 205, 0.15);
     --text-shadow: 1px 1px rgba(0, 0, 0, 0.1);
 }
 
