--- a/prototype/resources/scss/main.scss
+++ b/prototype/resources/scss/main.scss
@@ -19,6 +19,8 @@
 // COMPONENTSs
 @import "./components/timetable";
 @import "./components/header";
+@import "./components/form";
+@import "./components/gallery";
 
 
 
