--- a/prototype/resources/scss/base/typography.scss
+++ b/prototype/resources/scss/base/typography.scss
@@ -33,15 +33,23 @@ table {
 }
 
 th {
-  font-size: 3rem;
-  text-align: left;
+  font-size: 2.1rem;
   text-align: left;
   width: 35%;
+
+  @include tablet(){
+    font-size: 2.4rem;
+  }
 }
 
 td {
-  width: 65%;
-  font-size: 3.8rem;
-  font-weight: bold;
+  font-size: 2.2rem;
+  line-height: 2.4;
+  font-weight: 800;
   text-align: center;
+  width: 65%;
+  @include tablet(){
+    font-size: 2.8rem;
+  }
+
 }
