--- a/prototype/resources/scss/components/header.scss
+++ b/prototype/resources/scss/components/header.scss
@@ -1,14 +1,103 @@
-.nav__link{
+header {
+  width: 100%;
+  height: 60px;
+  backdrop-filter: blur(14px) brightness(2.1);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  @include tablet() {
+    top: 0;
+    bottom: unset;
+  }
+
+}
+
+.main-nav {
+  @include sizing(100%);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 60px;
+  @include tablet(){
+    grid-template-columns: 1fr repeat(3, 100px) 1fr 100px 1fr;
+  }
+
+  .nav__link{
+    &:first-child{
+      @include tablet(){
+        grid-column: 2/3;
+      }
+    }
+
+    &:last-child{
+      @include tablet(){
+        grid-column: -2/-3;
+      }
+    }
+  }
+}
+
+.nav__link {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 0.5rem;
+
+  @include transition(250ms);
+  @include sizing(100%);
+
+  text-decoration: none;
+  color: var(--black);
+  font-weight: 700;
+
+  &:after {
+    position: absolute;
+    content: '';
+    @include sizing(100%);
+    left: 0;
+    top: 0;
+    opacity: 0;
+    z-index: -1;
+    @include bckg-gradient(180deg, var(--primary), var(--primary-darker));
+  }
+
+  &:hover, &.active {
+
+    &:after {
+      opacity: 1;
+      @include transition(250ms);
+    }
+
     @include transition(250ms);
-    
-    &:hover{
-        background-color: var(--primary);
-        color: var(--secondary);
-        @include transition(250ms);
-        
-        svg{
-            fill: var(--secondary);
-            
-        }
+    color: var(--secondary);
+
+    .svg-icon {
+      fill: var(--secondary);
+        animation: bounce 150ms;
+    }
+  }
+
+  .svg-icon {
+    fill: var(--primary);
+    flex: 2;
+  }
+
+  span {
+    flex: 1;
+  }
+}
+
+
+@keyframes bounce {
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.09);
+    }
+    100%{
+        transform: scale(1);
     }
 }
