--- a/prototype/app/css/main.css
+++ b/prototype/app/css/main.css
@@ -102,7 +102,8 @@ section {
   position: relative;
   grid-column: 1/-1;
   background-image: url("/img/transition-top.svg");
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  padding-bottom: 10rem; }
   @media (min-width: 768px) {
     #hours {
       justify-items: left; } }
@@ -175,6 +176,9 @@ section {
 
 #gallery {
   margin: 130px 0 25px 0; }
+  @media (min-width: 1280px) {
+    #gallery {
+      margin: 240px 0 100px 0; } }
   #gallery h3 {
     font-size: 4rem;
     line-height: 1.2;
@@ -188,7 +192,7 @@ section {
       height: 4px;
       left: 0;
       bottom: -1rem;
-      background-color: var(--black);
+      background: linear-gradient(90deg, var(--primary) 0%, var(--primary-darker) 100%);
       border-radius: 5px; }
 
 article {
@@ -207,10 +211,20 @@ article {
   article h2 {
     font-size: 2.4rem;
     font-weight: 800;
-    line-height: 1; }
+    line-height: 1;
+    position: relative; }
     @media (min-width: 768px) {
       article h2 {
         font-size: 3.2rem; } }
+    article h2:after {
+      position: absolute;
+      content: "";
+      width: 41px;
+      height: 4px;
+      left: 0px;
+      bottom: -1rem;
+      border-radius: 5px;
+      background: linear-gradient(90deg, var(--primary) 0%, var(--primary-darker) 100%); }
   article p {
     font-size: 1.6rem; }
     @media (min-width: 768px) {
@@ -231,9 +245,25 @@ article {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 3rem 0; }
+  margin: 3rem 0;
+  position: relative;
+  padding: 30px; }
+  .contact-info:before {
+    left: 0;
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, var(--primary) 0%, var(--primary-darker) 100%);
+    border-radius: 15px;
+    z-index: 0;
+    box-shadow: var(--shadow); }
+    @media (min-width: 768px) {
+      .contact-info:before {
+        height: 80%; } }
 
 .contact-info__link {
+  z-index: 1;
   font-weight: 600;
   font-size: 1.8rem;
   display: flex;
@@ -243,6 +273,9 @@ article {
   @media (min-width: 768px) {
     .contact-info__link {
       font-size: 2.4rem; } }
+  @media (min-width: 1280px) {
+    .contact-info__link {
+      font-size: 3.2rem; } }
   .contact-info__link .svg-icon {
     width: 20px;
     height: 20px;
@@ -251,6 +284,10 @@ article {
     @media (min-width: 768px) {
       .contact-info__link .svg-icon {
         font-size: 2.4rem; } }
+    @media (min-width: 1280px) {
+      .contact-info__link .svg-icon {
+        width: 3.2rem;
+        height: 3.2rem; } }
   .contact-info__link:hover .svg-icon, .contact-info__link:focus .svg-icon {
     transform: scale(1.05);
     transition: all 150ms ease-in-out; }
@@ -310,7 +347,7 @@ header {
   grid-template-rows: 60px; }
   @media (min-width: 768px) {
     .main-nav {
-      grid-template-columns: 1fr repeat(3, 100px) 1fr 100px 1fr; } }
+      grid-template-columns: 4fr repeat(4, 100px) 1fr; } }
   @media (min-width: 768px) {
     .main-nav .nav__link:first-child {
       grid-column: 2/3; } }
@@ -444,11 +481,15 @@ header {
   font-weight: 800;
   box-shadow: var(--shadow);
   grid-column: 1/-1;
-  font-size: 1.8rem; }
+  font-size: 1.8rem;
+  transition: all 200ms ease-in-out; }
   @media (min-width: 768px) {
     .contact-form__btn {
       font-size: 2.4rem;
       padding: 1.2rem 1.5rem; } }
+  .contact-form__btn:hover {
+    transform: scale(1.08);
+    transition: all 200ms ease-in-out; }
 
 .gallery {
   display: grid;
