adding optimized images, adding functionality of Intersection Observer API in nav component, fixing performance issues

--- a/web-components/stencil/src/components/vet-gallery/vet-gallery.scss
+++ b/web-components/stencil/src/components/vet-gallery/vet-gallery.scss
@@ -10,6 +10,7 @@
     background: rgba(0,0,0,0.7);
 
     .backdropBtn{
+      border-radius: 0;
       width: 100%;
       height: 100%;
       background: transparent;
@@ -35,6 +36,7 @@
     }
 
     .gallery__img-fs{
+      display:block;
       height: auto;
       width: 88vw;
       max-height: 80vh;
